# rentomatic

./: alembic.ini  manage.py  pyproject.toml  pytest.ini
application/: app.py  config.py
application/rest/: room.py
config/: testing.json
docker/: production.yml  testing.yml
migrations/: env.py
migrations/versions/: 7b5f27a0020c_initial.py  ae84a71ec769_initial.py
rentomatic/: responses.py
rentomatic/domain/: room.py
rentomatic/repository/: memrepo.py  mongorepo.py  postgres_objects.py
rentomatic/requests/: room_list.py
rentomatic/serializers/: room.py
rentomatic/use_cases/: room_list.py
tests/: conftest.py  test_responses.py
tests/domain/: test_room.py
tests/repository/: test_memrepo.py
tests/repository/mongodb/: conftest.py  test_mongorepo.py
tests/repository/postgres/: conftest.py  test_postgresrepo.py
tests/requests/: test_room_list.py
tests/rest/: test_room.py
tests/serializers/: test_room.py
tests/use_cases/: test_room_list.py
